<resources>
    <string name="app_name">O-Hunter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_prepare_hunt">Prepare Hunt</string>
    <string name="title_activity_hunt">O-Hunt</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_fragment_offer">Offer</string>
    <string name="title_fragment_info">Target details</string>
    <string name="title_fragment_hunt">O-Hunt</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_server">Server Address</string>
    <string name="action_login">Log in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_nickname">This nickname is invalid</string>
    <string name="error_duplicate_nickname">This nickname already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_server">This server address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_user">This user does not exist</string>
    <string name="error_database_problem">Database error, try it again</string>
    <string name="error_camera_player_null">You must either log in, or enter offline mode!</string>
    <string name="error_camera_no_photo">You have to take a picture!</string>
    <string name="error_not_enough_points">You don\'t have enough points for this.</string>
    <string name="error_missing_points">You are missing %1$s.</string>
    <string name="error_cannot_read_players">The list of players is not available.</string>
    <string name="camera_activity_photos_counter" translatable="false">%1$d%2$s</string>
    <string name="server_address_template" translatable="false">192.168.0.1:4242</string>
    <string name="similarity_is">Similarity is %1$.1f%%</string>
    <string name="server_communication">Server communication</string>
    <string name="waiting_for_data">Waiting for data…</string>
    <string name="waiting_for_result">Waiting for result…</string>
    <string name="no_pending_evaluation">No pending evaluation is available.</string>
    <string name="cannot_save_request">Error when writing data, try it again.</string>
    <string name="connect_to_server">Please connect to the server, then try to evaluate.</string>
    <string name="ohex_general">Server sent OHExeption:</string>
    <string name="ohex_serialization">You are using incompatible version, update your app</string>
    <string name="ohex_occupied">Server is too busy right now, try it later</string>
    <string name="main_activity_player_title">Hello %1$s, your score is %2$d!</string>
    <string name="main_activity_server_address" translatable="false">%1$s:%2$d</string>
    <string name="main_activity_timer">Hunt ends in %1$02d:%2$02d:%3$02d</string>
    <string name="north_shortcut">N</string>
    <string name="east_shortcut">E</string>
    <string name="daytime_label">Preferred daytime:</string>
    <string name="daytime_day">Day</string>
    <string name="daytime_night">Night</string>
    <string name="daytime_both">Both</string>
    <string name="photo_bright">Bright photo</string>
    <string name="photo_dark">Dark photo</string>
    <string name="photo_unknown">Probably bright photo</string>
    <string name="gfields_name"><b>Name:</b></string>
    <string name="gfields_place_id"><b>ID:</b></string>
    <string name="gfields_url"><b>URL:</b></string>
    <string name="gfields_website"><b>Website:</b></string>
    <string name="gfields_formatted_address"><b>Address:</b></string>
    <string name="gfields_icon"><b>Icon:</b></string>
    <string name="last_pos_not_known">Last position is not known yet</string>
    <string name="radius_units_hint" translatable="false">(km)</string>
    <string name="radius_label">Radius:</string>
    <string name="number_of_targets_label">Number of targets:</string>
    <string name="unknown">unknown</string>
    <string name="coordinates_label">Coordinates:</string>
    <string name="start_hunt_button_label">Start The Hunt!</string>
    <string name="target_position">Target position:</string>
    <string name="distance_to_target">Distance to target:</string>
    <string name="image_gallery">Photo gallery:</string>
    <string name="place_information">Information:</string>
    <string name="my_position">My position:</string>
    <string name="place_fragment_photo_counter" translatable="false">%1$d/%2$d</string>
    <string name="select_photo_error">You must select a photo on target detail page!</string>
    <string name="your_nickname">Your nickname</string>
    <string name="button_new_hunt">Start new hunt</string>
    <string name="button_continue_hunt">Continue hunt</string>
    <string name="button_hunt_history">History</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_help">Help</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_logout">Log out</string>
    <string name="selected_photo_description">Selected picture</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="num_photos_label">Number of photos:</string>
    <string name="place_icon_description">place_icon</string>
    <string name="login_prompt">You need to log in!</string>
    <string name="template_image_description">template_image</string>
    <string name="last_photo_description">last_photo</string>
    <string name="executing_task">Counting</string>
    <string name="server_unreachable_error">Server unavailable! Try it again.</string>
    <string name="empty_number" translatable="false">__</string>
    <string name="question_marks" translatable="false">\?\?</string>
    <string name="number_sign" translatable="false">#</string>
    <string name="radius_editText_hint" translatable="false">1–50</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_photogenified_title">Entered active zone</string>
    <string name="notification_photogenified_text">Now you can take a picture of the discovered target.</string>
    <string name="dialog_wizard_game_initiated_title">The game is ready</string>
    <string name="dialog_wizard_game_initiated_message">Now you can accept 4 targets, which are available.</string>
    <string name="dialog_wizard_game_initiated_positive">OK</string>
    <string name="dialog_wizard_no_target_title">No target is available</string>
    <string name="dialog_wizard_no_target_message">Try to increase the radius or select another position.</string>
    <string name="dialog_wizard_no_target_positive">OK</string>
    <string name="dialog_wizard_low_acceptable_title">Cannot accept target</string>
    <string name="dialog_wizard_low_acceptable_message">You cannot accept more targets now, complete one already accepted.</string>
    <string name="dialog_wizard_low_acceptable_positive">OK</string>
    <string name="dialog_wizard_accept_question_title">Accept target</string>
    <string name="dialog_wizard_accept_question_message">Only limited amount of targets can be accepted (%1$d left). Do you want to continue?</string>
    <string name="dialog_wizard_accept_question_positive">Yes</string>
    <string name="dialog_wizard_accept_question_negative">No</string>
    <string name="dialog_wizard_reject_question_title">Reject target</string>
    <string name="dialog_wizard_reject_question_message">Rejecting a target will cost you %1$s. Do you want to continue?</string>
    <string name="dialog_wizard_reject_question_positive">Yes</string>
    <string name="dialog_wizard_reject_question_negative">No</string>
    <string name="dialog_wizard_open_up_question_title">Open up target</string>
    <string name="dialog_wizard_open_up_question_message">Making this target available will cost you %1$s. Do you want to continue?</string>
    <string name="dialog_wizard_open_up_question_positive">Yes</string>
    <string name="dialog_wizard_open_up_question_negative">No</string>
    <string name="dialog_wizard_missing_points_title">Not enough points</string>
    <string name="dialog_wizard_missing_points_message">You are missing %1$s.</string>
    <string name="dialog_wizard_missing_points_positive">OK</string>
    <string name="dialog_wizard_store_compare_title">Prepare for evaluation?</string>
    <string name="dialog_wizard_store_compare_message">Do you want to use these photos to complete this target?</string>
    <string name="dialog_wizard_store_compare_positive">Yes</string>
    <string name="dialog_wizard_store_compare_neutral">Cancel</string>
    <string name="dialog_wizard_store_compare_negative">No</string>
    <string name="dialog_wizard_target_locked_title">Target locked</string>
    <string name="dialog_wizard_target_locked_message">You can now accept one new target.</string>
    <string name="dialog_wizard_target_locked_positive">OK</string>
    <string name="dialog_wizard_target_completed_title">Target completed</string>
    <string name="dialog_wizard_target_completed_message">Acquired points were stored.</string>
    <string name="dialog_wizard_target_completed_positive">OK</string>
    <string name="dialog_wizard_location_permission_title">Location Permission Required</string>
    <string name="dialog_wizard_location_permission_message">The game needs to track your position.</string>
    <string name="dialog_wizard_location_permission_positive">OK</string>
    <string name="numberOfPoints_zero">%d points</string>
    <string name="numberOfPoints_one">%d point</string>
    <string name="pref_show_new_hunt_wizard_title">Wizard on new hunt</string>
    <string name="pref_show_new_hunt_wizard_summary">Should the dialog show on a new hunt?</string>
    <string name="pref_show_locked_wizard_title">Wizard on locked</string>
    <string name="pref_show_locked_wizard_summary">Should the dialog show after taking photo of a target?</string>
    <string name="pref_show_completed_wizard_title">Wizard on completed</string>
    <string name="pref_show_completed_wizard_summary">Should the dialog show on target completion?</string>
    <string name="pref_show_reject_confirm_title">Reject confirmation</string>
    <string name="pref_show_reject_confirm_summary">Should confirmation dialog show on target rejection?</string>
    <string name="pref_show_open_up_confirm_title">Open up confirmation</string>
    <string name="pref_show_open_up_confirm_summary">Should confirmation dialog show when opening up a target?</string>
    <string name="pref_show_accept_confirm_title">Accept confirmation</string>
    <string name="pref_show_accept_confirm_summary">Should confirmation dialog show on accepting a target?</string>
    <string name="pref_delete_history_photos_title">Delete history photos</string>
    <string name="pref_delete_history_photos_summary">Delete all photos of photoed targets from history</string>
    <string name="pref_delete_history_information_title">Delete history</string>
    <string name="pref_delete_history_information_summary">Delete history targets locally</string>
    <string name="info_application_name">Application Name</string>
    <string name="info_version">Version</string>
    <string name="info_version_name">Version Name</string>
    <string name="pref_store_photos_externally_title">Store photos externally</string>
    <string name="pref_store_photos_externally_summary">Store photos to externall gallery directory</string>
</resources>