<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_show_new_hunt_wizard"
        android:title="@string/pref_show_new_hunt_wizard_title"
        android:summary="@string/pref_show_new_hunt_wizard_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_locked_wizard"
        android:title="@string/pref_show_locked_wizard_title"
        android:summary="@string/pref_show_locked_wizard_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_completed_wizard"
        android:title="@string/pref_show_completed_wizard_title"
        android:summary="@string/pref_show_completed_wizard_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_reject_confirm"
        android:title="@string/pref_show_reject_confirm_title"
        android:summary="@string/pref_show_reject_confirm_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_open_up_confirm"
        android:title="@string/pref_show_open_up_confirm_title"
        android:summary="@string/pref_show_open_up_confirm_summary"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_show_accept_confirm"
        android:title="@string/pref_show_accept_confirm_title"
        android:summary="@string/pref_show_accept_confirm_summary"
        android:defaultValue="true" />

</PreferenceScreen>